--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -4,17 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DASHBOARD</title>
+    <link rel = "stylesheet" type = "text/css" href = "../css/dashboard.css">
+    <script src="https://kit.fontawesome.com/c65726fa38.js" crossorigin="anonymous"></script>
+    <title>Dashboard</title>
 </head>
 <body>
-    <h1>DASHBOARD</h1>
+    <div class="page-container">
+        <nav>
+            <button class="logo-button"><img alt="logo" src="../img/logo.svg" height="70vh"></button>
+            <button class="orange-button">
+                <i class="fas fa-home fa-4x"></i>
+            </button>
+            <button class="white-button">
+                <i class="fas fa-info-circle fa-4x"></i>
+            </button>
+            <button class="white-button">
+                <i class="fas fa-money-bill fa-4x"></i>
+            </button>
+            <button class="white-button">
+                <i class="far fa-calendar-alt fa-4x"></i>
+            </button>
+            <button class="white-button">
+                <i class="fas fa-address-card fa-4x"></i>
+            </button>
+            <button id="logout-button">
+                <i class="fas fa-sign-out-alt fa-4x"></i>
+            </button>
+            <! TODO logout button>
 
-    <ul>
-        <?php foreach($animals as $animal): ?>
-            <li>
-                <?= $animal ?>
-            </li>
-        <?php endforeach; ?>
-    </ul>
+        </nav>
+
+        <div class="left-menu">
+            <ul>
+                <li>
+                    <button class id="left-menu-button">
+                        dodaj nową informację
+                        <i class="fas fa-info-circle fa-2x"></i>
+                    </button>
+                </li>
+                <li>
+                    <button class id="left-menu-button">
+                        dodaj nowy rachunek
+                        <i class="fas fa-money-bill fa-2x"></i>
+                    </button>
+                </li>
+                <li>
+                    <button class id="left-menu-button">
+                        dodaj nowe wydarzenie
+                        <i class="far fa-calendar-alt fa-2x"></i>
+                    </button>
+                </li>
+                <li>
+                    <button class id="left-menu-button">
+                        ustawienia
+                        <i class="fas fa-cog fa-2x"></i>
+                    </button>
+                </li>
+
+            </ul>
+
+        </div>
+
+    </div>
 </body>
 </html>
