--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -37,25 +37,25 @@
         <div class="left-menu">
             <ul>
                 <li>
-                    <button class id="left-menu-button">
+                    <button class="left-menu-button">
                         dodaj nową informację
                         <i class="fas fa-info-circle fa-2x"></i>
                     </button>
                 </li>
                 <li>
-                    <button class id="left-menu-button">
+                    <button class="left-menu-button">
                         dodaj nowy rachunek
                         <i class="fas fa-money-bill fa-2x"></i>
                     </button>
                 </li>
                 <li>
-                    <button class id="left-menu-button">
+                    <button class="left-menu-button">
                         dodaj nowe wydarzenie
                         <i class="far fa-calendar-alt fa-2x"></i>
                     </button>
                 </li>
                 <li>
-                    <button class id="left-menu-button">
+                    <button class="left-menu-button">
                         ustawienia
                         <i class="fas fa-cog fa-2x"></i>
                     </button>
