--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -31,7 +31,7 @@ nav {
 
 .white-button, .orange-button{
     background: transparent;
-    border-width: 0.4em;
+    border-width: 0.3em;
     border-style: inset;
     width: 11.77vw;
     height: 9.2vh;
@@ -106,20 +106,34 @@ nav {
     list-style-type: none;
 }
 
-.group>ul>li{
+.group>ul>li>a{
     display: grid;
     grid-template-columns: 22% 78%;
     font: normal normal bold 1.2vw Segoe UI;
-    color: #564E4E;
+    color: darkmagenta;
     align-items: center;
     margin: 1.4vh 0;
 }
 
-.group>ul>li>img{
+.group>ul>li>a>img{
     object-fit: cover;
     border-radius: 50%;
     width: 3.6vw;
     height: 3.6vw;
+}
+
+.group>ul>p{
+    font: normal normal bold 1.8vw Segoe UI;
+    color: green;
+    text-align: center;
+    margin: 1.4vh 1vw 1.4vh 0;
+}
+
+.group>ul>.no-users{
+    font: normal normal bold 1.3vw Segoe UI;
+    color: #564E4E;
+    text-align: center;
+    margin: 1.4vh 1vw 1.4vh 0;
 }
 
 a{
